src/ExampleCode/BLE/build/log/idf_py_stdout_output_39164
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\GitHub\Firmware\src\ExampleCode\BLE\build\bootloader\esp-idf\esptool_py && C:\Users\takeu\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/takeu/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/GitHub/Firmware/src/ExampleCode/BLE/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/ble.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ble.cpp.obj 
ccache C:\Users\takeu\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/GitHub/Firmware/src/ExampleCode/BLE/build/config -IC:/GitHub/Firmware/src/ExampleCode/BLE/main -IC:/Users/takeu/esp/v5.5/esp-idf/components/newlib/platform_include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/include/freertos -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/config/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/takeu/esp/v5.5/esp-idf/components/freertos/esp_additions/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/heap/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/heap/tlsf -IC:/Users/takeu/esp/v5.5/esp-idf/components/log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/soc/esp32/register -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/platform_port/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/hal/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_rom/esp32 -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_common/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/port/soc -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_system/port/include/private -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/xtensa/deprecated_include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include/apps -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/include/apps/sntp -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/lwip/src/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/freertos/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/takeu/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/takeu/esp/v5.5/esp-idf/components/driver/deprecated -IC:/Users/takeu/esp/v5.5/esp-idf/components/driver/i2c/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/driver/touch_sensor/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/driver/twai/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_pm/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_ringbuf/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_gpio/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_pcnt/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_gptimer/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_spi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_i2s/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/sdmmc/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_sdspi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_sdio/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_dac/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_rmt/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_tsens/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_sdm/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_i2c/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_uart/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/vfs/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_ledc/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_parlio/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_driver_twai/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/include/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/osi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/api/include/api -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/btc/profile/esp/blufi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/btc/profile/esp/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/hci_log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/ble_log/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/host/bluedroid/api/include/api -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/tinycrypt/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/bt/common/tinycrypt/port -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_timer/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/include/local -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_event/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_phy/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_phy/esp32/include -IC:/Users/takeu/esp/v5.5/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/GitHub/Firmware/src/ExampleCode/BLE=. -fmacro-prefix-map=C:/Users/takeu/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ble.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\ble.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ble.cpp.obj -c C:/GitHub/Firmware/src/ExampleCode/BLE/main/ble.cpp
C:/GitHub/Firmware/src/ExampleCode/BLE/main/ble.cpp: In function 'void gatts_profile_event_handler(esp_gatts_cb_event_t, esp_gatt_if_t, esp_ble_gatts_cb_param_t*)':
C:/GitHub/Firmware/src/ExampleCode/BLE/main/ble.cpp:112:45: error: 'struct esp_ble_gatts_cb_param_t::gatts_add_char_evt_param' has no member named 'property'
  112 |             char_property = param->add_char.property;
      |                                             ^~~~~~~~
ninja: build stopped: subcommand failed.
